--- a/style.css
+++ b/style.css
@@ -26,6 +26,31 @@
   --weight-bold: 700;
   --weight-semi-bold: 600;
   --weight-regular: 400;
+
+  /* Size */
+  --size-border-redius: 4px;
+}
+
+/* Universal tags */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Tomorrow", sans-serif;
+  margin: 0;
+  cursor: default;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-black);
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
 }
 
 /* Typography */
@@ -58,8 +83,42 @@ p {
   margin: 4px 0;
 }
 
-/* Universal tags */
+/* Navbar */
+#navber {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--color-orange);
+  align-items: center;
+  color: var(--color-black);
+  padding: 16px;
+}
 
-* {
-  box-sizing: border-box;
+.navbar__menu {
+  display: flex;
+}
+
+.navbar__logo {
+  width: 100px;
+  height: 100px;
+}
+
+.navbar__logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.navbar__menu__item {
+  padding: 8px 12px;
+  margin: 0 4px;
+  cursor: pointer;
+  border-radius: var(--size-border-redius);
+}
+
+.navbar__menu__item.active {
+  border: 1px solid var(--color-black);
+}
+
+.navbar__menu__item:hover {
+  background-color: var(--color-black);
+  color: var(--color-orange);
 }
