--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
   --color-white: #ffffff;
   --color-light-white: #eeeeee;
   --color-dark-white: #bdbdbd;
-  --color-pink: #fe918d;
-  --color-dark-pink: #ff6863;
+  --color-pink: #ffb0cc;
+  --color-dark-pink: #ff6f6b;
   --color-dark-grey: #4d4d4d;
   --color-grey: #616161;
   --color-light-grey: #7c7979;
@@ -45,12 +45,22 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--color-black);
+  color: var(--color-white);
 }
 
 ul {
-  list-style: none;
   padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  background: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 /* Typography */
@@ -87,9 +97,9 @@ p {
 #navber {
   display: flex;
   justify-content: space-between;
-  background-color: var(--color-orange);
+  background-color: var(--color-pink);
   align-items: center;
-  color: var(--color-black);
+  color: var(--color-white);
   padding: 16px;
 }
 
@@ -115,10 +125,36 @@ p {
 }
 
 .navbar__menu__item.active {
-  border: 1px solid var(--color-black);
+  border: 1px solid var(--color-white);
 }
 
 .navbar__menu__item:hover {
-  background-color: var(--color-black);
-  color: var(--color-orange);
+  background-color: var(--color-dark-pink);
+}
+
+#home {
+  background: url("imgs/home-background.png") center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
+}
+
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+.home__title,
+.home__description {
+  color: var(--color-white);
+}
+
+.home__contact {
+  color: var(--color-white);
+  font-size: var(--font-regular);
+  font-weight: var(--weight-bold);
+  margin: 24px;
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-redius);
 }
