--- a/style.css
+++ b/style.css
@@ -444,3 +444,43 @@ p {
 .testimonial__speech-bubble a {
   color: var(--color-pink);
 }
+
+/* contact */
+#contact {
+  background-color: var(--color-pink);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights {
+  color: var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.contact__links {
+  margin: 24px 0;
+}
+
+.contact__links a {
+  width: 48px;
+  height: 48px;
+  margin: 5px;
+}
+
+.contact__links a svg {
+  width: 48px;
+  height: 48px;
+  transition: all var(--animation-duration) ease-in;
+}
+
+.contact__links a svg {
+  fill: var(--color-white);
+}
+
+.contact__links a:hover svg {
+  transform: scale(1.1);
+  fill: var(--color-yellow);
+}
