--- a/style.css
+++ b/style.css
@@ -194,11 +194,6 @@ p {
   text-align: center;
 }
 
-#home.home--dark {
-  background-color: var(--color-pink);
-  padding: 8px;
-}
-
 .home__avatar {
   width: 250px;
   height: 250px;
@@ -509,6 +504,27 @@ p {
 .contact__links a:hover svg {
   transform: scale(1.1);
   fill: var(--color-yellow);
+}
+
+/* Scroll */
+
+.arrow-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  font-size: 50px;
+  width: 70px;
+  height: 70px;
+  background: var(--color-pink);
+  color: var(--color-white);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 300ms ease-in;
+}
+.arrow-up.visible {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 /* For below 768px screen width */
