--- a/style.css
+++ b/style.css
@@ -153,15 +153,18 @@ p {
   padding: 8px 12px;
   margin: 0 4px;
   cursor: pointer;
+  border: 1px solid transparent;
   border-radius: var(--size-border-redius);
 }
 
-.navbar__menu__item.active {
+/* .navbar__menu__item.active {
   border: 1px solid var(--color-white);
-}
+} */
 
 .navbar__menu__item:hover {
   background-color: var(--color-dark-pink);
+  border-color: var(--color-white);
+  border-radius: var(--size-border-redius);
 }
 
 .navbar__toggle-btn {
@@ -339,7 +342,7 @@ p {
   padding: 8px 48px;
 }
 
-.category__btn.active,
+.category__btn.selected,
 .category__btn:hover {
   background-color: var(--color-pink);
   color: var(--color-white);
