--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-/* Web font */
-
-@font-face {
-  font-family: "NanumBarunGothic";
-  font-style: normal;
-  font-weight: 400;
-  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot");
-  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix")
-      format("embedded-opentype"),
-    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff")
-      format("woff"),
-    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf")
-      format("truetype");
-}
-
 /* Global */
 
 :root {
@@ -111,7 +96,7 @@ p {
 }
 
 .hangle {
-  font-family: "NanumBarunGothic", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   line-height: 1.5;
   letter-spacing: -0.7px;
 }
@@ -135,18 +120,24 @@ p {
   padding: 8px;
 }
 
-.navbar__menu {
-  display: flex;
+.logo {
+  width: 24px;
+  height: 44px;
 }
 
 .navbar__logo {
-  width: 100px;
-  height: 100px;
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-black);
+  display: flex;
+  align-items: center;
+}
+.navbar__logo a {
+  color: var(--color-black);
 }
 
-.navbar__logo img {
-  width: 100%;
-  height: 100%;
+.navbar__menu {
+  display: flex;
 }
 
 .navbar__menu__item {
@@ -422,14 +413,14 @@ p {
 }
 
 .projects__description h3 {
-  color: var(--color-white);
+  color: var(--color-orange);
 }
 
 .projects__description h3::after {
   content: "";
   display: block;
   background-color: var(--color-dark-white);
-  width: 25px;
+  width: 50px;
   height: 2px;
   position: relative;
   left: 50%;
@@ -547,9 +538,15 @@ p {
   .navbar__toggle-btn {
     display: block;
   }
-  #navber {
+
+  #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
+  }
+
+  #navbar.navbar--dark {
+    padding: 16px;
   }
   .navbar__menu {
     flex-direction: column;
@@ -557,24 +554,26 @@ p {
     width: 100%;
     display: none;
   }
+
+  .navbar__menu.open {
+    display: block;
+  }
   /* Aboutme */
   .about__majors {
     flex-direction: column;
   }
+
   .major {
     margin-bottom: 38px;
   }
-
   /* Skills */
   .skillset {
     flex-direction: column;
   }
-
   /* My work */
   .project {
     flex-grow: 1;
   }
-
   /* Testimonials */
   .testimonial__avatar {
     width: 80px;
