--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+/* Web font */
+
+@font-face {
+  font-family: "NanumBarunGothic";
+  font-style: normal;
+  font-weight: 400;
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot");
+  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix")
+      format("embedded-opentype"),
+    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff")
+      format("woff"),
+    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf")
+      format("truetype");
+}
+
 /* Global */
 
 :root {
@@ -96,7 +111,7 @@ p {
 }
 
 .hangle {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "NanumBarunGothic", sans-serif;
   line-height: 1.5;
   letter-spacing: -0.7px;
 }
@@ -120,24 +135,18 @@ p {
   padding: 8px;
 }
 
-.logo {
-  width: 24px;
-  height: 44px;
+.navbar__menu {
+  display: flex;
 }
 
 .navbar__logo {
-  font-size: var(--font-medium);
-  font-weight: var(--weight-semi-bold);
-  color: var(--color-black);
-  display: flex;
-  align-items: center;
-}
-.navbar__logo a {
-  color: var(--color-black);
+  width: 100px;
+  height: 100px;
 }
 
-.navbar__menu {
-  display: flex;
+.navbar__logo img {
+  width: 100%;
+  height: 100%;
 }
 
 .navbar__menu__item {
@@ -207,6 +216,11 @@ p {
   padding: 8px 12px;
   border: 2px solid var(--color-white);
   border-radius: var(--size-border-redius);
+  transition: all var(--animation-duration) ease-in;
+}
+
+.home__contact:hover {
+  background-color: var(--color-orange);
 }
 
 /* About */
@@ -413,14 +427,14 @@ p {
 }
 
 .projects__description h3 {
-  color: var(--color-orange);
+  color: var(--color-white);
 }
 
 .projects__description h3::after {
   content: "";
   display: block;
   background-color: var(--color-dark-white);
-  width: 50px;
+  width: 25px;
   height: 2px;
   position: relative;
   left: 50%;
@@ -534,19 +548,17 @@ p {
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
+  .section {
+    padding: 16px;
+  }
+
   /* Home */
   .navbar__toggle-btn {
     display: block;
   }
-
-  #navbar {
+  #navber {
     flex-direction: column;
     align-items: flex-start;
-    background-color: var(--color-pink);
-  }
-
-  #navbar.navbar--dark {
-    padding: 16px;
   }
   .navbar__menu {
     flex-direction: column;
@@ -554,26 +566,24 @@ p {
     width: 100%;
     display: none;
   }
-
-  .navbar__menu.open {
-    display: block;
-  }
   /* Aboutme */
   .about__majors {
     flex-direction: column;
   }
-
   .major {
     margin-bottom: 38px;
   }
+
   /* Skills */
   .skillset {
     flex-direction: column;
   }
+
   /* My work */
   .project {
     flex-grow: 1;
   }
+
   /* Testimonials */
   .testimonial__avatar {
     width: 80px;
