--- a/style.css
+++ b/style.css
@@ -1,20 +1,4 @@
-/* Web font */
-
-@font-face {
-  font-family: "NanumBarunGothic";
-  font-style: normal;
-  font-weight: 400;
-  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot");
-  src: url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.eot?#iefix")
-      format("embedded-opentype"),
-    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.woff")
-      format("woff"),
-    url("//cdn.jsdelivr.net/font-nanumlight/1.0/NanumBarunGothicWeb.ttf")
-      format("truetype");
-}
-
 /* Global */
-
 :root {
   /* Color */
   --color-white: #ffffff;
@@ -111,7 +95,7 @@ p {
 }
 
 .hangle {
-  font-family: "NanumBarunGothic", sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   line-height: 1.5;
   letter-spacing: -0.7px;
 }
@@ -122,10 +106,9 @@ p {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: transparent;
   align-items: center;
-  color: var(--color-white);
   padding: 16px;
+  background-color: transparent;
   transition: all var(--animation-duration) ease-in-out;
   z-index: 1;
 }
@@ -135,23 +118,33 @@ p {
   padding: 8px;
 }
 
-.navbar__menu {
-  display: flex;
-}
-
 .navbar__logo {
-  width: 100px;
-  height: 100px;
+  font-size: var(--font-medium);
+  font-weight: var(--weight-semi-bold);
+  color: var(--color-black);
+  display: flex;
+  justify-content: center;
 }
 
 .navbar__logo img {
-  width: 100%;
-  height: 100%;
+  width: 24px;
+  height: 44px;
+}
+
+.navbar__logo a {
+  color: var(--color-black);
+  font-family: "Noto Sans KR", sans-serif;
+  transform: translateX(-3px);
+}
+
+.navbar__menu {
+  display: flex;
 }
 
 .navbar__menu__item {
   padding: 8px 12px;
   margin: 0 4px;
+  color: var(--color-white);
   cursor: pointer;
   border: 1px solid transparent;
   border-radius: var(--size-border-redius);
@@ -174,18 +167,6 @@ p {
   font-size: 24px;
   color: var(--color-white);
   display: none;
-}
-
-/* Section common */
-.section {
-  padding: 50px;
-  text-align: center;
-  margin: auto;
-}
-
-.section__container {
-  max-width: 1200px;
-  margin: auto;
 }
 
 /* Home */
@@ -223,6 +204,18 @@ p {
   background-color: var(--color-orange);
 }
 
+/* Section common */
+.section {
+  padding: 50px;
+  text-align: center;
+  margin: auto;
+}
+
+.section__container {
+  max-width: 1200px;
+  margin: auto;
+}
+
 /* About */
 
 .about__majors {
@@ -253,6 +246,10 @@ p {
 
 .major__title {
   color: var(--color-dark-grey);
+}
+
+.major__description {
+  font-size: var(--font-small);
 }
 
 .job {
@@ -539,7 +536,7 @@ p {
   border-radius: 50%;
   opacity: 0;
   pointer-events: none;
-  transition: all 300ms ease-in;
+  transition: opacity 300ms ease-in;
 }
 .arrow-up.visible {
   opacity: 1;
@@ -548,17 +545,19 @@ p {
 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
-  .section {
-    padding: 16px;
-  }
-
   /* Home */
   .navbar__toggle-btn {
     display: block;
   }
-  #navber {
+
+  #navbar {
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--color-pink);
+  }
+
+  #navbar.navbar--dark {
+    padding: 16px;
   }
   .navbar__menu {
     flex-direction: column;
@@ -566,6 +565,17 @@ p {
     width: 100%;
     display: none;
   }
+
+  .navbar__menu.open {
+    display: block;
+  }
+
+  /* Section */
+
+  .section {
+    padding: 16px;
+  }
+
   /* Aboutme */
   .about__majors {
     flex-direction: column;
