--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ button {
   cursor: pointer;
   border: none;
   outline: none;
+  padding: 0;
 }
 
 /* Typography */
@@ -126,9 +127,16 @@ p {
   justify-content: center;
 }
 
-.navbar__logo img {
+.logo {
   width: 24px;
   height: 44px;
+  display: block;
+}
+
+.logo_mobile {
+  width: 15px;
+  height: 23px;
+  display: none;
 }
 
 .navbar__logo a {
@@ -342,6 +350,7 @@ p {
   border-radius: var(--size-border-redius);
   font-size: var(--font-regular);
   padding: 8px 48px;
+  position: relative;
 }
 
 .category__btn.selected,
@@ -352,7 +361,7 @@ p {
 .category__btn.active .category__count,
 .category__btn:hover .category__count {
   opacity: 1;
-  top: 0;
+  top: 6px;
 }
 .category__count {
   background-color: var(--color-orange);
@@ -362,9 +371,9 @@ p {
   height: 24px;
   display: inline-block;
   line-height: 24px;
-  position: relative;
+  position: absolute;
   top: -20px;
-  left: 4px;
+  right: 16px;
   opacity: 0;
   transition: all var(--animation-duration) ease-in;
 }
@@ -544,10 +553,44 @@ p {
 }
 
 /* For below 768px screen width */
+@media screen and (max-width: 809px) {
+  /* My work */
+  .category__btn {
+    width: 33.3%;
+    margin: 2px 0;
+  }
+}
+
+/* For below 768px screen width */
 @media screen and (max-width: 768px) {
+  :root {
+    /* Font size */
+    --font-large: 30px;
+    --font-medium: 18px;
+    --font-regular: 16px;
+    --font-small: 14px;
+    --font-micro: 12px;
+  }
+
   /* Home */
+
+  .logo {
+    display: none;
+  }
+
+  .logo_mobile {
+    display: block;
+  }
+
+  .navbar__logo a {
+    transform: translateX(-2px);
+  }
+
   .navbar__toggle-btn {
     display: block;
+    top: 16px;
+    right: 16px;
+    font-size: var(--font-medium);
   }
 
   #navbar {
@@ -574,29 +617,57 @@ p {
 
   .section {
     padding: 16px;
+    padding-top: 60px;
   }
 
   /* Aboutme */
   .about__majors {
     flex-direction: column;
+    margin-top: 30px;
+    margin-bottom: 0px;
   }
   .major {
-    margin-bottom: 38px;
+    margin-bottom: 30px;
   }
 
   /* Skills */
   .skillset {
     flex-direction: column;
+    align-items: center;
   }
 
   /* My work */
+  .category__btn {
+    margin: 4px 0;
+    width: 100%;
+  }
   .project {
     flex-grow: 1;
   }
 
   /* Testimonials */
+  .testimonial {
+    flex-direction: column;
+  }
   .testimonial__avatar {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
+  }
+  .testimonial__avatar:nth-child(even),
+  .testimonial__avatar:nth-child(odd) {
+    margin: 0;
+    margin-bottom: 8px;
+  }
+  .testimonial__speech-bubble {
+    order: 1;
+  }
+
+  .arrow-up {
+    bottom: 16;
+    right: 16px;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    line-height: 50px;
   }
 }
